tests/snapshots/align_comparisons/chained_compare_breaks.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/chained_compare_breaks.input.py
---

