tests/snapshots/align_comparisons/comprehension.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/comprehension.input.py
---
align-comparisons@179..180
