tests/snapshots/align_comparisons/comprehension.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/comprehension.input.py
---
"""
A multi-line `BoolOp` inside a list comprehension's `if` filter
aligns just like any other multi-line `BoolOp`.
"""

filtered = [
    x
    for x in xs
    if (
        x.kind       == "task"
        and x.weight == 1
    )
]
