tests/snapshots/align_comparisons/comprehension_skipped.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/comprehension_skipped.input.py
---

