tests/snapshots/align_comparisons/comprehension_skipped.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/comprehension_skipped.input.py
---
"""
A multi-line `BoolOp` inside a list comprehension is out of scope.
The rule skips the comprehension and leaves the inner comparison
operators verbatim.
"""

filtered = [
    x
    for x in xs
    if (
        x.kind == "task"
        and x.weight == 1
    )
]
