tests/snapshots/align_comparisons/disqualifier_splits_chain.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/disqualifier_splits_chain.input.py
---
align-comparisons@158..159
align-comparisons@216..217
