tests/snapshots/align_comparisons/disqualifier_splits_chain.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/disqualifier_splits_chain.input.py
---
"""
A disqualifying operand splits a long chain into two aligned groups.
Qualifying operands on each side share a column within their group.
"""

if (
    foo         == 1
    and bar_baz == 2
    and baz is None
    and qux       == 3
    and zorg_long == 4
):
    pass
