tests/snapshots/align_comparisons/idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/align_comparisons/idempotent.input.py
---

