tests/snapshots/align_comparisons/idempotent.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/align_comparisons/idempotent.input.py
---
"""
An already-aligned `and`-chain leaves every gap at one space past
the widest left side. The rule emits no edits.
"""

if (
    foo     == 1
    and bar == 2
    and qux == 3
):
    pass
